ingress-investimentos-pratare.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pratare-investimentos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /pratare-investimentos(/|$)(.*)
            backend:
              serviceName: pratare-investimentos-app
              servicePort: 8080
